Create course integration tests